# koa_pregen

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  Makefile  mainpage.dox  manifest.xml  t2.txt~  trajectory.txt
launch/: koa.launch  koa.launch~  koa_fixed.launch  koa_fixed.launch~  koa_no_obstacle.launch  koa_perfect.launch  koaalleyoop.launch  koaalleyoop.launch~  koadebug.launch  koadebug.launch~  koavalgrind.launch  koavalgrind.launch~
src/: KukaLWR_DHnew.cpp  KukaLWR_DHnew.h  SocketComm.cpp  SocketComm.h  cspaceconverter.cpp  cspaceconverter.cpp~  cspaceconverter.h  cspaceconverter.h~  koa_wqueue.h  main.cpp  main.cpp~  segmenter.cpp  segmenter.h  threadpool.cpp  threadpool.cpp~  threadpool.h  threadpool.h~  vectormath.cpp  vectormath.h  vrepComm.cpp  vrepComm.h  xdmp.cpp  xdmp.h
